rbd-mirror: demote/promote in same cluster results in split-brain

Fixes: http://tracker.ceph.com/issues/16855
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit a6901ca1a065419426b3ad704e27e43ba8d591b8)